Se cambio los links del menu de navegacion

--- a/Menu.html
+++ b/Menu.html
@@ -52,11 +52,11 @@
   <header>
     <img src="https://cdn7.kiwilimon.com/recetaimagen/2806/960x640/25790.jpg.jpg" alt="Salvadorean Bites" class="logo" />
     <nav aria-label="Navegación principal">
-      <a href="Restaurante.html#quienes-somos">Quiénes Somos</a>
+      <a href="quienes-somos.html">Quiénes Somos</a>
       <a href="Menu.html" aria-current="page">Menú</a>
-      <a href="Restaurante.html#promotions">Promociones</a>
+      <a href="promos.html">Promociones</a>"
       <a href="Restaurante.html#gallery">Galería</a>
-      <a href="Restaurante.html#contact">Contáctanos</a>
+      <a href="contacto.html">Contáctanos</a>
     </nav>
     <h1>Salvadorean Bites</h1>
     <p>Fresh. Local. Tasty.</p>
