--- a/Menu.html
+++ b/Menu.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <link rel="stylesheet" href="header&footer.css">
   <title>Menú | Salvadorean Bites</title>
   <style>
     :root{--brand:#a83232;--bg:#faf6f2;--card:#fff;--text:#333;--muted:#666}
@@ -49,18 +50,29 @@
   </style>
 </head>
 <body>
-  <header>
-    <img src="https://cdn7.kiwilimon.com/recetaimagen/2806/960x640/25790.jpg.jpg" alt="Salvadorean Bites" class="logo" />
-    <nav aria-label="Navegación principal">
-      <a href="quienes-somos.html">Quiénes Somos</a>
-      <a href="Menu.html" aria-current="page">Menú</a>
-      <a href="promos.html">Promociones</a>"
-      <a href="Restaurante.html#gallery">Galería</a>
-      <a href="contacto.html">Contáctanos</a>
-    </nav>
-    <h1>Salvadorean Bites</h1>
-    <p>Fresh. Local. Tasty.</p>
-  </header>
+
+<header class="site-header" aria-label="Encabezado">
+  <div class="brand">
+    <img src="https://cdn7.kiwilimon.com/recetaimagen/2806/960x640/25790.jpg.jpg" alt="Salvadorean Bites">
+    <div class="brand-text">
+      <h1>Salvadorean Bites</h1>
+      <p>Fresh. Local. Tasty.</p>
+    </div>
+  </div>
+
+  <!-- Toggle sin JS -->
+  <input type="checkbox" id="nav-check" aria-hidden="true">
+  <label for="nav-check" class="nav-toggle" aria-label="Abrir/cerrar menú">
+    <span class="bars" aria-hidden="true"></span> Menú
+  </label>
+
+  <nav class="primary-nav" aria-label="Navegación principal" id="primary-nav">
+    <a href="Restaurante.html">Quiénes Somos</a>
+    <a href="menu.html">Menú</a>
+    <a href="galeria.html">Galería</a>
+    <a href="contacto.html">Contáctanos</a>
+  </nav>
+</header>
 
   <main>
     <section class="card" aria-labelledby="menu-title">
@@ -177,8 +189,47 @@
     </section>
   </main>
 
-  <footer style="background:var(--brand);color:#fff;text-align:center;padding:1rem;margin-top:1.5rem">
-    &copy; 2024 Salvadorean Bites. Todos los derechos reservados.
-  </footer>
+<footer class="site-footer" aria-labelledby="footer-title">
+  <div class="footer-decor" aria-hidden="true"></div>
+
+  <div class="footer-inner">
+    <section class="footer-block">
+      <h2 id="footer-title" class="footer-title">Ubicación y Contacto</h2>
+
+      <address class="footer-address">
+        <p class="footer-line">
+          <strong>Dirección:</strong>
+          <span> Unicentro, Soyapango, San Salvador </span>
+          <a
+            href="https://www.google.com/maps/place/Unicentro+Soyapango/@13.7085801,-89.1399873,15z/data=!4m6!3m5!1s0x8f633b5f2f5f4d7d:0x8c6e4f3e4e4e4e4e!8m2!3d13.7085801!4d-89.1399873!16s%2Fg%2F11c52_5y1h"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="footer-link"
+            >Ver en mapa</a>
+        </p>
+
+        <p class="footer-line">
+          <strong>Horarios:</strong>
+          <span>Lunes a Sábado: 10:00 AM - 10:00 PM</span><br>
+          <span>Domingos: 10:00 AM - 8:00 PM</span>
+        </p>
+
+        <p class="footer-line">
+          <strong>Teléfono:</strong>
+          <a
+            href="https://wa.me/50369739021"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="footer-link"
+            >+503 6973 9021</a>
+        </p>
+      </address>
+    </section>
+
+    <hr class="footer-divider" aria-hidden="true">
+    <p class="footer-copy">&copy; 2024 Salvadorean Bites. Todos los derechos reservados.</p>
+  </div>
+</footer>
+
 </body>
 </html>
