Fix HTML encoding issues in galeria.html

--- a/galeria.html
+++ b/galeria.html
@@ -131,7 +131,7 @@
     </div>
 
 <nav>
-    <a href="Restaurante.html" style="color:#fff; text-decoration:none; margin:0 0.8rem; font-weight:bold;">Quiénes Somos</a>
+    <a href="quienes-somos.html" style="color:#fff; text-decoration:none; margin:0 0.8rem; font-weight:bold;">Quiénes Somos</a>
     <a href="menu.html" style="color:#fff; text-decoration:none; margin:0 0.8rem; font-weight:bold;">Menú</a>
     <a href="galeria.html" style="color:#fff; text-decoration:none; margin:0 0.8rem; font-weight:bold;">Galería</a>
     <a href="contacto.html" style="color:#fff; text-decoration:none; margin:0 0.8rem; font-weight:bold;">Contáctanos</a>
@@ -246,3 +246,4 @@
 
 </body>
 </html>
+
