Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   </label>
 
   <nav class="primary-nav" aria-label="Navegación principal" id="primary-nav">
-    <a href="Restaurante.html">Quiénes Somos</a>
+    <a href="quienes-somos.html">Quiénes Somos</a>
     <a href="menu.html">Menú</a>
     <a href="galeria.html">Galería</a>
     <a href="contacto.html">Contáctanos</a>
@@ -233,3 +233,4 @@
 
 </body>
 </html>
+
