--- a/promos.html
+++ b/promos.html
@@ -48,18 +48,24 @@
 </head>
 <body>
 
-	<header>
-            <img src="https://cdn7.kiwilimon.com/recetaimagen/2806/960x640/25790.jpg.jpg" alt="Salvadorean Bites" style="width:240px; border-radius:50%; margin-bottom:1rem;">
-            <nav style="margin-bottom:1rem;">
-                <a href="quienes-somos.html" style="color:#fff; text-decoration:none; margin:0 1rem; font-weight:bold;">Quiénes Somos</a>
-                <a href="menu.html" style="color:#fff; text-decoration:none; margin:0 1rem; font-weight:bold;">Menú</a>
-                <a href="promociones.html" style="color:#fff; text-decoration:none; margin:0 1rem; font-weight:bold;">Promociones</a>
-                <a href="galeria.html" style="color:#fff; text-decoration:none; margin:0 1rem; font-weight:bold;">Galería</a>
-                <a href="contacto.html" style="color:#fff; text-decoration:none; margin:0 1rem; font-weight:bold;">Contáctanos</a>
-            </nav>
-            <h1>Salvadorean Bites</h1>
-            <p>Fresh. Local. Tasty.</p>
-        </header>
+	<header style="background-color:#b30000; color:white; display:flex; align-items:center; justify-content:space-between; padding:0.5rem 1.5rem; height:100px; flex-wrap:wrap;">
+    	<div style="display:flex; align-items:center;">
+        <img src="https://cdn7.kiwilimon.com/recetaimagen/2806/960x640/25790.jpg.jpg" 
+             alt="Salvadorean Bites" 
+             style="width:80px; height:80px; border-radius:50%; margin-right:1rem;">
+        <div>
+            <h1 style="margin:0; font-size:1.5rem;">Salvadorean Bites</h1>
+            <p style="margin:0; font-size:0.9rem;">Fresh. Local. Tasty.</p>
+        </div>
+    	</div>
+
+	<nav>
+    	<a href="quienes-somos.html" style="color:#fff; text-decoration:none; margin:0 0.8rem; font-weight:bold;">Quiénes Somos</a>
+    	<a href="menu.html" style="color:#fff; text-decoration:none; margin:0 0.8rem; font-weight:bold;">Menú</a>
+    	<a href="galeria.html" style="color:#fff; text-decoration:none; margin:0 0.8rem; font-weight:bold;">Galería</a>
+    	<a href="contacto.html" style="color:#fff; text-decoration:none; margin:0 0.8rem; font-weight:bold;">Contáctanos</a>
+	</nav>
+	</header>
 
 <section id="promociones" class="container">
   <h2>Promociones</h2>
