Refactor quienes-somos.html structure and styles

--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -13,27 +13,18 @@
     </style>
 </head>
 <body>
-   <header class="site-header" aria-label="Encabezado">
-  <div class="brand">
-    <img src="https://cdn7.kiwilimon.com/recetaimagen/2806/960x640/25790.jpg.jpg" alt="Salvadorean Bites">
-    <div class="brand-text">
-      <h1>Salvadorean Bites</h1>
-      <p>Fresh. Local. Tasty.</p>
-    </div>
-  </div>
-
-  <!-- Toggle sin JS -->
-  <input type="checkbox" id="nav-check" aria-hidden="true">
-  <label for="nav-check" class="nav-toggle" aria-label="Abrir/cerrar menú">
-    <span class="bars" aria-hidden="true"></span> Menú
-  </label>
-
-  <nav class="primary-nav" aria-label="Navegación principal" id="primary-nav">
-    <a href="quienes-somos.html">Quiénes Somos</a>
-    <a href="menu.html">Menú</a>
-    <a href="galeria.html">Galería</a>
-    <a href="contacto.html">Contáctanos</a>
-  </nav>
+  <header>
+        <img src="https://cdn7.kiwilimon.com/recetaimagen/2806/960x640/25790.jpg.jpg" alt="Salvadorean Bites" style="width:200px; border-radius:50%; margin-bottom:1rem;">
+        <nav>
+            <a href="#quienes-somos">Quiénes Somos</a>
+            <a href="Menu.html">Menú</a>
+            <a href="#promotions">Promociones</a>
+            <a href="#gallery">Galería</a>
+            <a href="#contact">Contáctanos</a>
+        </nav>
+        <h1>Salvadorean Bites</h1>
+        <p>Fresh. Local. Tasty.</p>
+    </header>
 </header>
 
     <div class="container">
@@ -96,4 +87,5 @@
 </footer>
 </body>
 </html>
+
 
