--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -17,10 +17,10 @@
         <img src="https://cdn7.kiwilimon.com/recetaimagen/2806/960x640/25790.jpg.jpg" alt="Salvadorean Bites" style="width:200px; border-radius:50%; margin-bottom:1rem;">
         <nav>
             <a href="#quienes-somos">Quiénes Somos</a>
-            <a href="Menu.html">Menú</a>
-            <a href="#promotions">Promociones</a>
-            <a href="#gallery">Galería</a>
-            <a href="#contact">Contáctanos</a>
+            <a href="#index.html">Menú</a>
+            <a href="#promos.html">Promociones</a>
+            <a href="#galeria.html">Galería</a>
+            <a href="#contacto.html">Contáctanos</a>
         </nav>
         <h1>Salvadorean Bites</h1>
         <p>Fresh. Local. Tasty.</p>
@@ -86,6 +86,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
