--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -100,12 +100,13 @@
 		</div>
 	</div>
 
-	<nav class="primary-nav" aria-label="Navegación principal" id="primary-nav">
-		<a href="quienessomos.html">Quiénes Somos</a>
-		<a href="index.html">Menú</a>
-		<a href="galeria.html">Galería</a>
-		<a href="contacto.html">Contáctanos</a>
-	</nav>
+ <nav class="primary-nav" aria-label="Navegación principal" id="primary-nav">
+    <a href="quienes-somos.html">Quiénes Somos</a>
+    <a href="index.html">Menú</a>
+	<a href="promos.html">Promociones</a>
+    <a href="galeria.html">Galería</a>
+    <a href="contacto.html">Contáctanos</a>
+  </nav>
 </header>
 
 <main>
@@ -161,3 +162,4 @@
 
 </body>
 </html>
+
