--- a/galeria.html
+++ b/galeria.html
@@ -9,7 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
  
-  <link rel="stylesheet" href="galeria.css">
+  <link rel="stylesheet" href="Galeria.css">
 </head>
 
 <body>
@@ -157,3 +157,4 @@
 
 </body>
 </html>
+
