Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
             <div class="nav-links">
                 <a class="nav-link" href="index.html">Menú</a>
                 <a class="nav-link" href="galeria.html">Galería</a>
-                <a class="nav-link" href="conocenos.html">Conócenos</a>
+                <a class="nav-link" href="quienes-somos.html">Conócenos</a>
                 <a class="nav-link" href="promociones.html">Promociones</a>
                 <a class="nav-link" href="contactanos.html">Contáctanos</a>
             </div>
@@ -574,4 +574,5 @@
     </footer>
 </body>
 </html>
+
 
