Se añadio imagen a index.html

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     align-items: center;
     justify-content: center;
     min-height: 50vh; /* altura relativa a la ventana */
-    background-image: url("pupusas.jpg"); /* imagen de fondo */
+    background-image: url("https://images.unsplash.com/photo-1617902271850-21d560795d60?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=1170"); /* imagen de fondo */
     background-position: center;
     background-size: cover; /* ocupa todo el contenedor */
     background-repeat: no-repeat;
@@ -150,7 +150,7 @@
         content: "";
         position: absolute;
         inset: 0;
-        background: linear-gradient(180deg, rgba(153, 152, 152, 0.45), rgba(173, 172, 172, 0.55));
+        background: linear-gradient(180deg, rgba(153, 152, 152, 0.45), rgba(173, 172, 172, 0.4));
         z-index: 0;
     }
 
