--- a/index.html
+++ b/index.html
@@ -426,8 +426,8 @@
                 <a class="nav-link" href="index.html">Menú</a>
                 <a class="nav-link" href="galeria.html">Galería</a>
                 <a class="nav-link" href="quienes-somos.html">Conócenos</a>
-                <a class="nav-link" href="promociones.html">Promociones</a>
-                <a class="nav-link" href="contactanos.html">Contáctanos</a>
+                <a class="nav-link" href="promos.html">Promociones</a>
+                <a class="nav-link" href="contacto.html">Contáctanos</a>
             </div>
         </div>
     </nav>
@@ -574,5 +574,6 @@
     </footer>
 </body>
 </html>
+
 
 
