--- a/galeria.html
+++ b/galeria.html
@@ -24,11 +24,11 @@
       </button>
       <div class="collapse navbar-collapse" id="mainNavbar">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <a class="nav-link" href="index.html">Menú</a>
-                <a class="nav-link" href="galeria.html">Galería</a>
-                <a class="nav-link" href="quienes-somos.html">Conócenos</a>
-                <a class="nav-link" href="promos.html">Promociones</a>
-                <a class="nav-link" href="contacto.html">Contáctanos</a>
+          <li class="nav-item"><a class="nav-link active" href="menu.html">Menú</a></li>
+          <li class="nav-item"><a class="nav-link active" href="galeria.html">Galería</a></li>
+          <li class="nav-item"><a class="nav-link active" href="quienes-somos.html">Conócenos</a></li>
+          <li class="nav-item"><a class="nav-link active" href="promos.htm">Promociones</a></li>
+          <li class="nav-item"><a class="nav-link active" href="contacto.html">Contáctanos</a></li>
         </ul>
       </div>
     </div>
@@ -158,6 +158,7 @@
 
 </body>
 </html>
+
 
 
 
