Refactor galeria.html structure and content

--- a/galeria.html
+++ b/galeria.html
@@ -16,23 +16,18 @@
 <body>
 
   <!-- ==================== Navbar ==================== -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
-    <div class="container">
-      <a class="navbar-brand fw-bold text-uppercase" href="index.html">Salvadorean Bites</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="mainNavbar">
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link active" href="menu.html">Menú</a></li>
-          <li class="nav-item"><a class="nav-link active" href="galeria.html">Galería</a></li>
-          <li class="nav-item"><a class="nav-link active" href="quienes-somos.html">Conócenos</a></li>
-          <li class="nav-item"><a class="nav-link active" href="promos.htm">Promociones</a></li>
-          <li class="nav-item"><a class="nav-link active" href="contacto.html">Contáctanos</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+<header>
+    <img src="https://cdn7.kiwilimon.com/recetaimagen/2806/960x640/25790.jpg.jpg" alt="Salvadorean Bites" class="logo" />
+    <nav aria-label="Navegación principal">
+      <a href="quienes-somos"aria-current="page" >Quiénes Somos</a>
+      <a href="Index.html" >Menú</a>
+      <a href="promos">Promociones</a>
+      <a href="galeria">Galería</a>
+      <a href="contacto">Contáctanos</a>
+    </nav>
+    <h1>Salvadorean Bites</h1>
+    <p>Fresh. Local. Tasty.</p>
+  </header>
 
   
   <h2>nuestros platillos</h2>
@@ -158,6 +153,7 @@
 
 </body>
 </html>
+
 
 
 
