--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -43,31 +43,9 @@
 		.values-list li{padding:.5rem 0;border-top:1px dashed #f1efee;font-family:Arial,Helvetica,sans-serif;color:var(--muted);line-height:1.45}
 		.values-list li:first-child{border-top:none}
 
-		 .site-footer {
-        background: var(--brand-bg);
-        color: var(--brand-contrast);
-        padding: 2rem 0;
-        margin-top: 3rem;
-    }
-
-    .footer-inner {
-        max-width: var(--container-max);
-        margin: 0 auto;
-        padding: 0 1rem;
-        text-align: center;
-    }
-
-    .footer-link {
-        color: var(--brand-contrast);
-        text-decoration: none;
-        display: inline-block;
-        margin: 0.3rem 0.5rem;
-        transition: transform 0.2s ease;
-    }
-
-    .footer-link:hover {
-        text-decoration: underline;
-        transform: translateY(-2px);
+		footer { background: #a83232; color: #fff; text-align: center; padding: 1rem; margin-top: 2rem; }
+            a.white-link { color: #fff; text-decoration: none; }
+	header { background: #a83232; color: #fff; padding: 2rem 1rem; text-align: center; }
 		
 		@media (max-width:1024px){
 			main{padding:0 1.5rem}
@@ -179,19 +157,34 @@
 
 	</section>
 </main>
+<footer>
+            <h2>Ubicación y Contacto</h2>
+            <p><strong>Dirección:</strong> Unicentro, Soyapango, San Salvador
+            <a href="https://www.google.com/maps/place/Unicentro+Soyapango/@13.7085801,-89.1399873,15z/data=!4m6!3m5!1s0x8f633b5f2f5f4d7d:0x8c6e4f3e4e4e4e4e!8m2!3d13.7085801!4d-89.1399873!16s%2Fg%2F11c52_5y1h" 
+                target="_blank" 
+                rel="noopener noreferrer" 
+                class="white-link"> Ver en mapa</a>
+            </p>
 
-	  <footer id="contacto" class="site-footer">
-        <div class="footer-inner">
-            <p><a href="https://wa.me/50369739021" class="footer-link">📱 +503 6973-9021</a></p>
-            <p><a href="tel:+50322223333" class="footer-link">📞 +503 2222-3333</a></p>
-            <p><a href="mailto:contacto@salvadoreanbites.com" class="footer-link">✉️ contacto@salvadoreanbites.com</a></p>
-            <p><a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15504.052095698684!2d-89.14685376716508!3d13.717660932513878!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f63377992279d1f%3A0x14961537e6a76f3f!2sUnicentro%20Soyapango%2C%20San%20Salvador!5e0!3m2!1ses-419!2ssv!4v1760822301931!5m2!1ses-419!2ssv" target="_blank" class="footer-link">📍 Unicentro Soyapango, San Salvador</a></p>
-            <small>&copy; 2025 Salvadorean Bites. Todos los derechos reservados.</small>
-        </div>
-    </footer>
+            <p><strong>Horarios:</strong> Lunes a Sábado: 10:00 AM - 10:00 PM<br>
+                Domingos: 10:00 AM - 8:00 PM</p>
+
+            <p><strong>Teléfono:</strong> 
+             <a href="https://wa.me/50369739021" 
+                target="_blank" 
+                rel="noopener noreferrer" 
+                class="white-link">
+                +503 6973 9021
+             </a>
+            </p>
+
+            &copy; 2024 Salvadorean Bites. Todos los derechos reservados.
+        </footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
+
 
 
 
