--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -97,18 +97,18 @@
 	</style>
 </head>
 <body>
-  <header>
+<header>
     <img src="https://cdn7.kiwilimon.com/recetaimagen/2806/960x640/25790.jpg.jpg" alt="Salvadorean Bites" class="logo" />
     <nav aria-label="Navegación principal">
-      <a href="quienes-somos"aria-current="page" >Quiénes Somos</a>
-      <a href="Index.html" >Menú</a>
-      <a href="promos">Promociones</a>
-      <a href="galeria">Galería</a>
-      <a href="contacto">Contáctanos</a>
+      <a href="quienes-somos.html"aria-current="page" >Quiénes Somos</a>
+      <a href="index.html" >Menú</a>
+      <a href="promos.html">Promociones</a>
+      <a href="galeria.html">Galería</a>
+      <a href="contacto.html">Contáctanos</a>
     </nav>
     <h1>Salvadorean Bites</h1>
     <p>Fresh. Local. Tasty.</p>
-  </header>
+  </header>
 
     <main class="site-main">
         <!-- Hero Section -->
@@ -184,6 +184,7 @@
 
 </body>
 </html>
+
 
 
 
