Fix HTML structure and formatting in quienes-somos.html

--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -100,7 +100,7 @@
 <header>
     <img src="https://cdn7.kiwilimon.com/recetaimagen/2806/960x640/25790.jpg.jpg" alt="Salvadorean Bites" class="logo" />
     <nav aria-label="Navegación principal">
-      <a href="quienes-somos.html"aria-current="page" >Quiénes Somos</a>
+      <a href="quienes-somos.html">Quiénes Somos</a>
       <a href="index.html" >Menú</a>
       <a href="promos.html">Promociones</a>
       <a href="galeria.html">Galería</a>
@@ -184,6 +184,7 @@
 
 </body>
 </html>
+
 
 
 
