--- a/promos.html
+++ b/promos.html
@@ -68,7 +68,7 @@ header h1, #menu-title { text-align:center; margin:.25rem 0; }
 	<header>
     <img src="https://cdn7.kiwilimon.com/recetaimagen/2806/960x640/25790.jpg.jpg" alt="Salvadorean Bites" class="logo" />
     <nav aria-label="Navegación principal">
-      <a href="quienes-somos"aria-current="page" >Quiénes Somos</a>
+      <a href="quienes-somos">Quiénes Somos</a>
       <a href="Index.html" >Menú</a>
       <a href="promos">Promociones</a>
       <a href="galeria">Galería</a>
@@ -134,5 +134,6 @@ header h1, #menu-title { text-align:center; margin:.25rem 0; }
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
