--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -5,7 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Quiénes somos | Salvadorean Bites</title>
 	<style>
-	  	:root{--brand:#a83232;--bg:#faf6f2;--card:#fff;--text:#333;--muted:#666}
+
+	:root{--brand:#a83232;--bg:#faf6f2;--card:#fff;--text:#333;--muted:#666}
     *{box-sizing:border-box}
     body{margin:0;font-family:Arial,Helvetica,sans-serif;background:var(--bg);color:var(--text)}
     header{background:var(--brand);color:#fff;padding:1.25rem 1rem;text-align:center}
@@ -24,168 +25,123 @@
     .section-title{display:block;text-align:center;margin:0 0 .6rem 0}
     .section-title h3{color:var(--brand);margin:0;font-size:1.05rem;display:inline-block}
 		
-		main{max-width:980px;margin:1.5rem auto;padding:0 1rem}
-		.card{background:var(--card);border-radius:10px;padding:1.25rem;box-shadow:0 6px 18px rgba(0,0,0,.06)}
+	main{max-width:980px;margin:1.5rem auto;padding:0 1rem}
+	.card{background:var(--card);border-radius:10px;padding:1.25rem;box-shadow:0 6px 18px rgba(0,0,0,.06)}
+	#qs-title{text-align:center}
+	.lead{color:var(--muted);margin:0}
 
-		.hero{display:grid;grid-template-columns:1fr;gap:1rem;align-items:center;text-align:center;padding:1rem;border-radius:10px;background:linear-gradient(180deg,rgba(168,50,50,.06),rgba(168,50,50,.02))}
-		.hero img{width:100%;max-width:420px;border-radius:10px;object-fit:cover}
-		.hero h2{margin:.25rem 0;color:var(--brand)}
-		.lead{color:var(--muted);margin:0}
+	.commitment {
+		display:grid;grid-template-columns:1fr;gap:1rem;align-items:center;text-align:center;
+		padding:1rem;border-radius:10px;
+		background:linear-gradient(180deg,rgba(168,50,50,.06),rgba(168,50,50,.02));
+		margin-top:1rem;
+	}
+	.commitment h2 {margin:.25rem 0;color:var(--brand)}
 
-		.grid-3{display:grid;grid-template-columns:repeat(3,1fr);gap:1rem;margin-top:1rem}
-		.box{background:#fff;padding:1rem;border-radius:10px;border:1px solid #f3f0ef}
-		.box h3{margin:.25rem 0;color:var(--brand)}
-		.box p{margin:0;color:var(--muted);line-height:1.45}
+	.grid-3{display:grid;grid-template-columns:repeat(3,1fr);gap:1rem;margin-top:2rem;}
+	.grid-3 > div { /* Estilo de las ex-cajas 'box' */
+		background:#fff;padding:1rem;border-radius:10px;border:1px solid #f3f0ef;
+	}
+	.grid-3 h3{margin:.25rem 0;color:var(--brand)}
+	.grid-3 p{margin:0;color:var(--muted);line-height:1.45}
 
-		#qs-title{text-align:center}
+	.values-list{list-style:none;padding:0;margin:0}
+	.values-list li{padding:.5rem 0;border-top:1px dashed #f1efee;color:var(--muted);line-height:1.45}
+	.values-list li:first-child{border-top:none}
 
-		.values-list{list-style:none;padding:0;margin:0;font-family:Arial,Helvetica,sans-serif}
-		.values-list li{padding:.5rem 0;border-top:1px dashed #f1efee;font-family:Arial,Helvetica,sans-serif;color:var(--muted);line-height:1.45}
-		.values-list li:first-child{border-top:none}
+	footer { background: var(--brand); color: #fff; text-align: center; padding: 1rem; margin-top: 2rem; }
+	a.white-link { color: #fff; text-decoration: none; }
 
-		footer { background: #a83232; color: #fff; text-align: center; padding: 1rem; margin-top: 2rem; }
-            a.white-link { color: #fff; text-decoration: none; }
-	header { background: #a83232; color: #fff; padding: 2rem 1rem; text-align: center; }
-		
-		@media (max-width:1024px){
-			main{padding:0 1.5rem}
-			.card{padding:1.5rem}
-		}
-		
-		@media (max-width:900px){
-			.grid-3{grid-template-columns:repeat(2,1fr);gap:.8rem}
-			.hero{padding:.8rem}
-			main{margin:1rem auto}
-		}
-		
-		@media (max-width:768px){
-			header{padding:1rem .8rem}
-			.brand{gap:.8rem}
-			.brand-text h1{font-size:1.2rem}
-			.brand-text p{font-size:.85rem}
-			nav[aria-label="Navegación principal"]{gap:.3rem}
-			nav a{padding:.25rem .4rem;font-size:.9rem}
-			main{padding:0 1rem}
-			.card{padding:1rem}
-			.hero{padding:.6rem}
-			.hero h2{font-size:1.1rem}
-			#qs-title{font-size:1.3rem}
-		}
-		
-		@media (max-width:600px){
-			.grid-3{grid-template-columns:1fr;gap:.6rem}
-			.brand{flex-direction:column;gap:.5rem}
-			.brand img{width:72px;height:72px}
-			.box{padding:.8rem}
-			.values-list li{padding:.4rem 0}
-			footer{padding:0 .8rem}
-		}
-		
-		@media (max-width:480px){
-			header{padding:.8rem .6rem}
-			.brand img{width:64px;height:64px}
-			.brand-text h1{font-size:1.1rem}
-			nav a{padding:.2rem .3rem;margin:.1rem .2rem;font-size:.85rem}
-			main{margin:.8rem auto;padding:0 .8rem}
-			.card{padding:.8rem}
-			.hero{padding:.5rem}
-			#qs-title{font-size:1.2rem}
-			.box{padding:.6rem}
-			.box h3{font-size:.95rem}
-			.box p, .values-list li{font-size:.9rem}
-		}
+	@media (max-width:900px){
+		.grid-3{grid-template-columns:repeat(2,1fr);gap:.8rem}
+		.commitment{padding:.8rem}
+		main{margin:1rem auto}
+	}
+	@media (max-width:768px){
+		header{padding:1rem .8rem}
+		nav a{font-size:.9rem}
+		main{padding:0 1rem}
+		.card{padding:1rem}
+		.commitment{padding:.6rem}
+		.commitment h2{font-size:1.1rem}
+		#qs-title{font-size:1.3rem}
+	}
+	@media (max-width:600px){
+		.grid-3{grid-template-columns:1fr;gap:.6rem}
+		.grid-3 > div{padding:.8rem} /* Estilo de las ex-cajas 'box' */
+		.values-list li{padding:.4rem 0}
+		footer{padding:.8rem}
+	}
 	</style>
 </head>
 <body>
 <header>
-    <img src="https://cdn7.kiwilimon.com/recetaimagen/2806/960x640/25790.jpg.jpg" alt="Salvadorean Bites" class="logo" />
-    <nav aria-label="Navegación principal">
-      <a href="quienes-somos.html">Quiénes Somos</a>
-      <a href="index.html" >Menú</a>
-      <a href="promos.html">Promociones</a>
-      <a href="galeria.html">Galería</a>
-      <a href="contacto.html">Contáctanos</a>
-    </nav>
-    <h1>Salvadorean Bites</h1>
-    <p>Fresh. Local. Tasty.</p>
-  </header>
-
-    <main class="site-main">
-        <!-- Hero Section -->
-        <section class="hero">
-            <div class="hero-content">
-                <h1 class="hero-title">Salvadorean Bites</h1>
-                <p class="hero-sub">Disfruta de la auténtica comida salvadoreña.</p>
-            </div>
-        </section>
+	<img src="https://cdn7.kiwilimon.com/recetaimagen/2806/960x640/25790.jpg.jpg" alt="Salvadorean Bites" class="logo" />
+	<nav aria-label="Navegación principal">
+		<a href="quienes-somos.html">Quiénes Somos</a>
+		<a href="index.html" >Menú</a>
+		<a href="promos.html">Promociones</a>
+		<a href="galeria.html">Galería</a>
+		<a href="contacto.html">Contáctanos</a>
+	</nav>
+	<h1>Salvadorean Bites</h1>
+	<p>Fresh. Local. Tasty.</p>
+</header>
 
 <main>
 	<section class="card" aria-labelledby="qs-title">
 		<h2 id="qs-title">Quiénes somos</h2>
 		<p class="lead">Somos un restaurante familiar dedicado a compartir los sabores de El Salvador con ingredientes frescos y recetas tradicionales, reinterpretadas con cariño.</p>
 
-		<div class="hero" role="region" aria-label="Resumen">
+		<div class="commitment" role="region" aria-label="Resumen de compromiso">
 			<div>
 				<h2>Nuestro compromiso</h2>
 				<p class="lead">Traer platos caseros y momentos memorables, comprometidos con la calidad, el servicio y la comunidad.</p>
 			</div>
-
 		</div>
 
-		<div style="margin-top:1rem">
-			<div class="grid-3">
-				<div class="box" aria-labelledby="mision-title">
-					<h3 id="mision-title">Misión</h3>
-					<p>Ofrecer auténtica comida salvadoreña preparada con ingredientes locales, creando experiencias gastronómicas accesibles y acogedoras para familias y amigos.</p>
-				</div>
+		<div class="grid-3">
+			<div aria-labelledby="mision-title">
+				<h3 id="mision-title">Misión</h3>
+				<p>Ofrecer auténtica comida salvadoreña preparada con ingredientes locales, creando experiencias gastronómicas accesibles y acogedoras para familias y amigos.</p>
+			</div>
 
-				<div class="box" aria-labelledby="vision-title">
-					<h3 id="vision-title">Visión</h3>
-					<p>Ser reconocidos como el restaurante de referencia de la cocina salvadoreña en nuestra región, promoviendo la cultura y el sabor de El Salvador a nuevas audiencias.</p>
-				</div>
+			<div aria-labelledby="vision-title">
+				<h3 id="vision-title">Visión</h3>
+				<p>Ser reconocidos como el restaurante de referencia de la cocina salvadoreña en nuestra región, promoviendo la cultura y el sabor de El Salvador a nuevas audiencias.</p>
+			</div>
 
-				<div class="box" aria-labelledby="valores-title">
-					<h3 id="valores-title">Valores</h3>
-					<ul class="values-list" aria-label="Lista de valores">
-						<li><strong>Calidad:</strong> Seleccionamos ingredientes frescos y técnicas que realzan el sabor tradicional.</li>
-						<li><strong>Honestidad:</strong> Transparencia en el origen y preparación de nuestros platos.</li>
-						<li><strong>Pasión:</strong> Cocinamos con cariño y respeto por nuestras raíces.</li>
-					</ul>
-				</div>
+			<div aria-labelledby="valores-title">
+				<h3 id="valores-title">Valores</h3>
+				<ul class="values-list" aria-label="Lista de valores">
+					<li><strong>Calidad:</strong> Seleccionamos ingredientes frescos y técnicas que realzan el sabor tradicional.</li>
+					<li><strong>Honestidad:</strong> Transparencia en el origen y preparación de nuestros platos.</li>
+					<li><strong>Pasión:</strong> Cocinamos con cariño y respeto por nuestras raíces.</li>
+				</ul>
 			</div>
 		</div>
 
 	</section>
 </main>
 <footer>
-            <h2>Ubicación y Contacto</h2>
-            <p><strong>Dirección:</strong> Unicentro, Soyapango, San Salvador
-            <a href="https://www.google.com/maps/place/Unicentro+Soyapango/@13.7085801,-89.1399873,15z/data=!4m6!3m5!1s0x8f633b5f2f5f4d7d:0x8c6e4f3e4e4e4e4e!8m2!3d13.7085801!4d-89.1399873!16s%2Fg%2F11c52_5y1h" 
-                target="_blank" 
-                rel="noopener noreferrer" 
-                class="white-link"> Ver en mapa</a>
-            </p>
+	<h2>Ubicación y Contacto</h2>
+	<p><strong>Dirección:</strong> Unicentro, Soyapango, San Salvador
+	<a href="https://www.google.com/maps/place/Unicentro+Soyapango/@13.7085801,-89.1399873,15z/data=!4m6!3m5!1s0x8f633b5f2f5f4d7d:0x8c6e4f3e4e4e4e4e!8m2!3d13.7085801!4d-89.1399873!16s%2Fg%2F11c52_5y1h" target="_blank" rel="noopener noreferrer" class="white-link"> Ver en mapa</a>
+	</p>
 
-            <p><strong>Horarios:</strong> Lunes a Sábado: 10:00 AM - 10:00 PM<br>
-                Domingos: 10:00 AM - 8:00 PM</p>
+	<p><strong>Horarios:</strong> Lunes a Sábado: 10:00 AM - 10:00 PM<br>
+		Domingos: 10:00 AM - 8:00 PM</p>
 
-            <p><strong>Teléfono:</strong> 
-             <a href="https://wa.me/50369739021" 
-                target="_blank" 
-                rel="noopener noreferrer" 
-                class="white-link">
-                +503 6973 9021
-             </a>
-            </p>
+	<p><strong>Teléfono:</strong>
+		<a href="https://wa.me/50369739021" target="_blank" rel="noopener noreferrer" class="white-link">
+			+503 6973 9021
+		</a>
+	</p>
 
-            &copy; 2024 Salvadorean Bites. Todos los derechos reservados.
-        </footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-
+	© 2024 Salvadorean Bites. Todos los derechos reservados.
+</footer>
 </body>
 </html>
-
-
 
 
 
