Refactor quienes-somos.html structure and styles

--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -49,8 +49,9 @@
 	.values-list li{padding:.5rem 0;border-top:1px dashed #f1efee;color:var(--muted);line-height:1.45}
 	.values-list li:first-child{border-top:none}
 
-	footer { background: var(--brand); color: #fff; text-align: center; padding: 1rem; margin-top: 2rem; }
-	a.white-link { color: #fff; text-decoration: none; }
+	  }
+	footer { background: #a83232; color: #fff; text-align: center; padding: 1rem; margin-top: 2rem; }
+            a.white-link { color: #fff; text-decoration: none; }
 
 	@media (max-width:900px){
 		.grid-3{grid-template-columns:repeat(2,1fr);gap:.8rem}
@@ -137,6 +138,7 @@
 </body>
 
 </html>
+
 
 
 
