--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Quiénes somos | Salvadorean Bites</title>
+	<link rel="stylesheet" href="header&footer.css">
 	<style>
 
 	:root{--brand:#a83232;--bg:#faf6f2;--card:#fff;--text:#333;--muted:#666}
@@ -138,6 +139,7 @@
 </body>
 
 </html>
+
 
 
 
