Fix HTML encoding issues in contacto.html

--- a/contacto.html
+++ b/contacto.html
@@ -91,7 +91,7 @@
   <header>
     <img src="https://cdn7.kiwilimon.com/recetaimagen/2806/960x640/25790.jpg.jpg" alt="Salvadorean Bites" class="logo" />
     <nav aria-label="Navegación principal">
-      <a href="quienes-somos.html"aria-current="page" >Contáctanos</a>
+      <a href="quienes-somos.html"aria-current="page" >Conócenos</a>
       <a href="index.html" >Menú</a>
       <a href="promos.html">Promociones</a>
       <a href="galeria.html">Galería</a>
@@ -142,3 +142,4 @@
     </footer>
 </body>
 </html>
+
